# omikuji

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  MANIFEST.in  README.md  build.rs  setup.py
.ci/: azure-pipelines.yml  azure-python-build.yml  azure-setup-rust.yml
.github/workflows/: python.yml  rust.yml
c-api/: Cargo.toml  build.rs
c-api/include/: parabel.h  parabel.hpp
c-api/src/: lib.rs
examples/: README  run_cli.sh  run_py.py
omikuji/: __init__.py
python/: setup.py
python-wrapper/omikuji/: __init__.py
python/omikuji/: .gitignore
python/parabel/: .gitignore  __init__.py
python/scripts/: build.py
src/: data.rs  lib.rs  mat_util.rs  util.rs
src/data/: mod.rs  sparse_vector.rs
src/model/: cluster.rs  eval.rs  liblinear.rs  mod.rs  train.rs
