[package]
name = "omikuji"
description = "an efficient implementation of Partitioned Label Treesand its variations for extreme multi-label classification"
version = "0.3.0"
edition = "2018"
authors = ["Tom Dong <tom.tung.dyb@gmail.com>"]
license = "MIT"
repository = "https://github.com/tomtung/omikuji"
documentation = "https://docs.rs/omikuji"
keywords = [
    "machine-learning",
    "multi-label",
    "classification",
    "xmc",
]
readme = "README.md"

[dependencies]
clap = { version = "2.33", optional = true }
hashbrown = "0.6"
itertools = "0.8"
log = "0.4"
ndarray = { version = "0.13", features = ["serde-1"] }
num-traits = "0.2"
order-stat = "0.1"
ordered-float = "1.0"
pbr = "1.0"
rand = "0.7"
rayon = "1.2"
serde = { version = '1.0', features = ['derive'] }
serde_cbor = "0.10"
serde_json = "1.0"
simple_logger = { version = "1.3", optional = true }
sprs = { version = "0.7", features = ["serde", "serde_derive"] }
time = "0.1"

[dev-dependencies]
assert_approx_eq = "1.1"

[[bin]]
name = "omikuji"
path = "src/bin/omikuji.rs"
required-features = ["cli"]

[features]
cli = ["simple_logger", "clap"]
