[package]
name = "omikuji"
description = "an efficient implementation of Partitioned Label Treesand its variations for extreme multi-label classification"
version = "0.5.1"
edition = "2021"
authors = ["Tom Dong <tom.tung.dyb@gmail.com>"]
license = "MIT"
repository = "https://github.com/tomtung/omikuji"
documentation = "https://docs.rs/omikuji"
keywords = [
    "machine-learning",
    "multi-label",
    "classification",
    "xmc",
]
readme = "README.md"
exclude = ["examples/"]

[dependencies]
const-default = "1.0.*"
clap = { version = "4.4.*", features = ["cargo", "derive"], optional = true }
hashbrown = "0.14.*"
itertools = "0.11.*"
log = "0.4.*"
ndarray = { version = "0.14.*", features = ["serde-1"] }
num-traits = "0.2.*"
order-stat = "0.1.*"
ordered-float = "3.0.*"
pbr = "1.1.*"
rand = "0.8.*"
rayon = "1.8.*"
serde = { version = '1.0.*', features = ['derive'] }
serde_cbor = "0.11.*"
serde_json = "1.0.*"
simple_logger = { version = "4.2.*", features = ["stderr"], optional = true }
sprs = { version = "0.9.*", features = ["serde"] }
pdqselect = "0.1.*"

[dev-dependencies]
assert_approx_eq = "1.1.*"

[[bin]]
name = "omikuji"
path = "src/bin/omikuji.rs"
required-features = ["cli"]

[features]
cli = ["simple_logger", "clap"]

[profile.release]
lto = true
codegen-units = 1
