[package]
name = "omikuji_c-api"
version = "0.3.3"
edition = "2018"
authors = ["Tom Dong <tom.tung.dyb@gmail.com>"]

[lib]
name = "omikuji"
crate-type = ["staticlib", "cdylib"]

[dependencies]
itertools = "0.10.*"
libc = "0.2.*"
omikuji = { path = ".." }
simple_logger = "1.13.*"

[build-dependencies]
cbindgen = "0.20.*"

[profile.release]
panic = "abort"
