[package]
name = "omikuji_c-api"
version = "0.5.0"
edition = "2021"
authors = ["Tom Dong <tom.tung.dyb@gmail.com>"]

[lib]
name = "omikuji"
crate-type = ["staticlib", "cdylib"]

[dependencies]
itertools = "0.11.*"
libc = "0.2.*"
omikuji = { path = ".." }
simple_logger = "4.2.*"

[build-dependencies]
cbindgen = "0.26.*"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
